syntax = "proto3";

package runtime;

service RuntimeService {
  // Basic operations
  rpc Execute (ExecuteRequest) returns (ExecuteResponse);
  rpc Initialize (InitializeRequest) returns (InitializeResponse);
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
  
  // Management operations
  rpc GetMetrics (MetricsRequest) returns (MetricsResponse);
  rpc GetLogs (LogsRequest) returns (LogsResponse);
  rpc UpdateConfig (ConfigRequest) returns (ConfigResponse);
}

message ExecuteRequest {
  string request_id = 1;
  string params = 2;  // JSON string
  string context = 3;  // JSON string
  optional string script_content = 4;
}

message ExecuteResponse {
  string result = 1;  // JSON string
  uint64 execution_time_ms = 2;
  optional uint64 memory_usage_bytes = 3;
}

message InitializeRequest {
  string request_id = 1;
  string context = 2;  // JSON string
  string script_content = 3;
}

message InitializeResponse {
  string request_id = 1;
  bool success = 2;
  optional string error = 3;
}

message HealthCheckRequest {
}

message HealthCheckResponse {
  string status = 1;
  string timestamp = 2;
}

// Management operations messages
message MetricsRequest {
  string request_id = 1;
  optional string metric_name = 2;
  optional string time_range = 3;  // e.g. "1h", "24h", "7d"
}

message MetricsResponse {
  string request_id = 1;
  string metrics = 2;  // JSON string containing metrics data
}

message LogsRequest {
  string request_id = 1;
  optional string log_level = 2;  // e.g. "info", "error"
  optional string time_range = 3;  // e.g. "1h", "24h", "7d"
  optional uint32 limit = 4;
  optional uint32 offset = 5;
}

message LogsResponse {
  string request_id = 1;
  string logs = 2;  // JSON string containing log entries
  uint32 total_count = 3;
}

message ConfigRequest {
  string request_id = 1;
  string config = 2;  // JSON string containing configuration updates
}

message ConfigResponse {
  string request_id = 1;
  bool success = 2;
  optional string error = 3;
  string current_config = 4;  // JSON string containing current configuration
}
